fix:better layout breaking for additional rows in table view

--- a/Frontend/src/app/common/ui/list-table/list-table.component.scss
+++ b/Frontend/src/app/common/ui/list-table/list-table.component.scss
@@ -265,7 +265,14 @@ $badgeWidth:250px;
 .more a{
   color:$primary;
 }
+.tableList{
+  @for $i from 2 through 10 {
+    .row_#{$i} {
+      word-break: break-all;
+    }
+  }
 
+}
 .tableList .row.selected,
 .cardList .row.selected{
   background: $workspaceSelectedBackgroundEffect;
